--- a/README
+++ b/README
@@ -191,4 +191,6 @@ COMPANYSEARCH
 *   **Error Handling**: The `CompanyService` includes error handling and retry mechanisms to gracefully handle potential API issues.
 *   **Further Enhancements**: You can extend this application by adding more features, improving the user interface, or implementing more advanced database queries. 
 
-I hope this comprehensive README helps! Feel free to ask if you have any further questions or modifications. 
+Screenshot :
+https://drive.google.com/file/d/1lx2r_rOoDmrtucIbOT7yegjSXNv4oLtm/view?usp=drive_link
+
