--- a/README
+++ b/README
@@ -192,5 +192,7 @@ COMPANYSEARCH
 *   **Further Enhancements**: You can extend this application by adding more features, improving the user interface, or implementing more advanced database queries. 
 
 Screenshot :
-https://drive.google.com/file/d/1lx2r_rOoDmrtucIbOT7yegjSXNv4oLtm/view?usp=drive_link
+![alt text](https://drive.google.com/file/d/1lx2r_rOoDmrtucIbOT7yegjSXNv4oLtm/view?usp=drive_link)
+
+
 
